completed server side refactoring
