# server/src/services/signService.js
@@ -3,16 +3,16 @@
 var dao = require('./../dao/dao.js'),
     logger = require('./../lib/logger.js');
 
-function signIn(email, password, next) {
-    dao.signIn(email, password, next);
+function signIn(email, password) {
+    return dao.signIn(email, password);
 }
 
-function signUp(email, password, next) {
-    dao.signUp(email, password, next);
+function signUp(email, password, name) {
+    return dao.signUp(email, password, name);
 }
 
 function userExists(userId, next) {
-    dao.userExists(userId, next);
+    return dao.userExists(userId, next);
 }
 
 function userExistsMoreInfo(userInfo, next) {
