# server/src/swagger/swagger.yaml
@@ -49,7 +49,7 @@ paths:
           in: body
           description: User credentials
           schema:
-            $ref: '#/definitions/User'
+            $ref: '#/definitions/SignInUser'
           required: true
       tags:
         - Sign
@@ -333,7 +333,15 @@ definitions:
         type: string
       password:
         type: string
-
+  SignInUser:
+    type: object
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      name:
+        type: string
   Task:
     type: object
     properties:
